Explore Lenovo Lifeline FossKit

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@
 notes.txt
 screenlog.*
 /latest-official-firmware/ix4-200d-3.2.16.30221*
+/latest-official-firmware/lenovoemc-lifeline*
+/latest-official-firmware/EMCLifeline*
 TODO.txt
