--- a/scripts/dts/kirkwood-ix4-200d.dts
+++ b/scripts/dts/kirkwood-ix4-200d.dts
@@ -1,6 +1,8 @@
+// SPDX-License-Identifier: GPL-2.0+
 /*
- *  Device tree file for the Iomega ix4-200d
+ * Device Tree file for Iomega ix4-200d
  *
+ * Copyright (c) 2020, 1000001101000
  * Copyright (c) 2016, bodhi <mibodhi@gmail.com>
  * Copyright (c) 2015, DaMacc
  *
@@ -8,6 +10,8 @@
 
 /dts-v1/;
 
+#include <dt-bindings/gpio/gpio.h>
+#include <dt-bindings/input/input.h>
 #include "kirkwood.dtsi"
 #include "kirkwood-6281.dtsi"
 
@@ -26,6 +30,110 @@
 	};
 
 	ocp@f1000000 {
+		pinctrl: pin-controller@10000 {
+			spi_pin1: spi-pin1 {
+				marvell,pins = "mpp12";
+				marvell,function = "gpio";
+			};
+
+			spi_pin2: spi-pin2 {
+				marvell,pins = "mpp13";
+				marvell,function = "gpio";
+			};
+
+			select_button_pin: select-button-pin {
+				marvell,pins = "mpp16";
+				marvell,function = "gpio";
+			};
+
+			reset_button_pin: reset-button-pin {
+				marvell,pins = "mpp29";
+				marvell,function = "gpio";
+			};
+
+			cancel_button_pin: cancel-button-pin {
+				marvell,pins = "mpp47";
+				marvell,function = "gpio";
+			};
+
+			power_button_pin: power-button-pin {
+				marvell,pins = "mpp49";
+				marvell,function = "gpio";
+			};
+		};
+
+		spi3 {
+			compatible = "spi-gpio";
+			status = "okay";
+			gpio-sck = <&gpio0 13 GPIO_ACTIVE_LOW>;
+			gpio-mosi = <&gpio0 12 GPIO_ACTIVE_LOW>;
+			cs-gpios = <&gpio0 14 GPIO_ACTIVE_LOW>;
+			num-chipselects = <1>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			gpio_spi: gpio_spi@0 {
+				compatible = "fairchild,74hc595";
+				gpio-controller;
+				#gpio-cells = <2>;
+				reg = <0>;
+				registers-number = <1>;
+				spi-max-frequency = <100000>;
+			};
+		};
+
+		gpio-leds {
+			compatible = "gpio-leds";
+
+			//top white, or red?
+			led5 {
+				label = "led5";
+				gpios = <&gpio_spi 4 GPIO_ACTIVE_LOW>;
+				default-state = "off";
+			};
+
+			led6 {
+				label = "led6";
+				gpios = <&gpio_spi 5 GPIO_ACTIVE_LOW>;
+				default-state = "off";
+			};
+
+			led8 {
+				label = "led8";
+				gpios = <&gpio_spi 7 GPIO_ACTIVE_HIGH>;
+				default-state = "on";
+			};
+		};
+
+		gpio-keys {
+			compatible = "gpio-keys";
+			pinctrl-0 = <&power_button_pin &select_button_pin &cancel_button_pin &reset_button_pin>;
+			pinctrl-names = "default";
+
+			select-button {
+				label = "Select Button";
+				linux,code = <KEY_OPTION>;
+				gpios = <&gpio0 16 GPIO_ACTIVE_HIGH>;
+			};
+
+			reset-button {
+				label = "Reset Button";
+				linux,code = <KEY_PROG1>;
+				gpios = <&gpio0 29 GPIO_ACTIVE_HIGH>;
+			};
+
+			cancel-button {
+				label = "Cancel Button";
+				linux,code = <KEY_PROG2>;
+				gpios = <&gpio1 15 GPIO_ACTIVE_LOW>;
+			};
+
+			power-button {
+				label = "Power Button";
+				linux,code = <KEY_ESC>;
+				gpios = <&gpio1 17 GPIO_ACTIVE_LOW>;
+			};
+		};
 
 		i2c@11000 {
 			status = "okay";
