Add github actions

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
+.vscode/
 *.mnt/
 /build/
+/bohdi/
 /dist/
-notes.txt
+notes*.txt
 screenlog.*
 /latest-official-firmware/ix4-200d-3.2.16.30221*
 /latest-official-firmware/lenovoemc-lifeline*
 /latest-official-firmware/EMCLifeline*
 TODO.txt
+*.tar.gz
+*.tgz
+*.zip
