Fix github actions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     volumes:
       - "./scripts:/scripts"
       - "./dist:/dist"
+      - "./tmp:/tmp"
   linux:
     build: .
     command: ["/scripts/build_linux.sh"]
